--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.11",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^4.15.11",
+    "nodemailer": "^6.9.16",
+    "resend": "^4.0.1",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.17"
   }
 }
