--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/netlify": "^6.0.0",
     "@astrojs/tailwind": "^5.1.3",
-    "astro": "^4.15.11",
+    "astro": "^5.0.3",
     "nodemailer": "^6.9.16",
     "resend": "^4.0.1",
     "tailwindcss": "^3.4.16",
